deploy-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ship-system
  labels:
    gateway-access: allowed
